[gd_scene load_steps=8 format=3 uid="uid://dmbkkuvukccu2"]

[ext_resource type="Script" uid="uid://ddxxsh4hw1jns" path="res://addons/3d_interactives/interactive_controller.gd" id="1_ak1ep"]
[ext_resource type="Script" uid="uid://dkh8camb0f4v2" path="res://addons/3d_interactives/prompt_model.gd" id="2_2uye2"]
[ext_resource type="Script" uid="uid://cf3du6ag06yug" path="res://addons/3d_interactives/interact_input_collector.gd" id="2_vw78b"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7gn7q"]
size = Vector3(5, 2, 5)

[sub_resource type="ViewportTexture" id="ViewportTexture_ak1ep"]
viewport_path = NodePath("Prompt/PromptTexture")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ak1ep"]
resource_local_to_scene = true
transparency = 1
no_depth_test = true
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_ak1ep")
albedo_texture_force_srgb = true
texture_filter = 1
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_ak1ep"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_ak1ep")
size = Vector2(1, 0.3)

[node name="Interactive" type="Area3D"]
script = ExtResource("1_ak1ep")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_7gn7q")

[node name="InteractInputCollector" type="Node" parent="."]
script = ExtResource("2_vw78b")

[node name="Prompt" type="Node3D" parent="."]
script = ExtResource("2_2uye2")

[node name="PromptTexture" type="SubViewport" parent="Prompt"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(100, 30)

[node name="Label" type="Label" parent="Prompt/PromptTexture"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 18
text = "cta"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PromptMesh" type="MeshInstance3D" parent="Prompt"]
physics_interpolation_mode = 2
mesh = SubResource("QuadMesh_ak1ep")
skeleton = NodePath("../PromptTexture")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
